<resources>
    <string name="app_name">My Add</string>
    <string name="enter_title_hint">Enter title:</string>
    <string name="enter_description_hint">Enter description:</string>
    <string name="enter_price_price">Enter price:</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="add_button">Add button</string>
</resources>